src/objects/Customer_Login__c.object
<CustomObject>
    <description>The equivalent of LZData User table</description>
    <fields>
        <fullName>Box_Id__c</fullName>
        <label>Box Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create__c</fullName>
        <formula>HYPERLINK( &quot;/apex/ContactManager?CustomerLoginId=&quot; &amp; Id &amp; &quot;&amp;fkUser=&quot; &amp;  Customer_ID__c  , IMAGE( &quot;/resource/1434143528000/NewAuthorizedContactButton&quot; , &quot;New Authorized Contact&quot; ) , &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <description>fkUser in User table in LZData</description>
        <externalId>true</externalId>
        <label>Customer Number</label>
        <length>13</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Has_Active_Box_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has Active Box Account</description>
        <label>Has Active Box Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Login</relationshipLabel>
        <relationshipName>Customer_Login</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Login</label>
    <listViews>
        <fullName>All_Customer_Logins_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Customer_ID__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Customer Logins - Created Today</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Customer Login/Email</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Login</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>